@@ -11,7 +11,6 @@ import com.powsybl.iidm.network.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
@@ -22,6 +21,8 @@ class ShuntCompensatorAdderImpl extends AbstractInjectionAdder<ShuntCompensatorA
     private ShuntCompensatorModelBuilder modelBuilder;
 
     private Integer sectionCount;
+
+    private Integer solvedSectionCount;
 
     private double targetV = Double.NaN;
 
@@ -48,7 +49,7 @@ class ShuntCompensatorAdderImpl extends AbstractInjectionAdder<ShuntCompensatorA
 
     }
 
-    class ShuntCompensatorLinearModelAdderImpl implements ShuntCompensatorLinearModelAdder, ShuntCompensatorModelBuilder {
+    class ShuntCompensatorLinearModelAdderImpl extends AbstractBasePropertiesHolder implements ShuntCompensatorLinearModelAdder, ShuntCompensatorModelBuilder {
 
         private double bPerSection = Double.NaN;
 
@@ -90,15 +91,17 @@ class ShuntCompensatorAdderImpl extends AbstractInjectionAdder<ShuntCompensatorA
 
         @Override
         public ShuntCompensatorModelExt build() {
-            return new ShuntCompensatorLinearModelImpl(bPerSection, gPerSection, maximumSectionCount);
+            ShuntCompensatorLinearModelImpl linearModel = new ShuntCompensatorLinearModelImpl(bPerSection, gPerSection, maximumSectionCount);
+            this.copyPropertiesTo(linearModel);
+            return linearModel;
         }
     }
 
-    class ShuntCompensatorNonLinearModelAdderImpl implements ShuntCompensatorNonLinearModelAdder, ShuntCompensatorModelBuilder {
+    class ShuntCompensatorNonLinearModelAdderImpl extends AbstractBasePropertiesHolder implements ShuntCompensatorNonLinearModelAdder, ShuntCompensatorModelBuilder {
 
         private final List<SectionAdderImpl> sectionAdders = new ArrayList<>();
 
-        class SectionAdderImpl implements SectionAdder {
+        class SectionAdderImpl extends AbstractBasePropertiesHolder implements SectionAdder {
 
             private double b = Double.NaN;
 
@@ -123,7 +126,7 @@ class ShuntCompensatorAdderImpl extends AbstractInjectionAdder<ShuntCompensatorA
                     if (sectionAdders.isEmpty()) {
                         g = 0;
                     } else {
-                        g = sectionAdders.get(sectionAdders.size() - 1).g;
+                        g = sectionAdders.getLast().g;
                     }
                 }
                 sectionAdders.add(this);
@@ -150,9 +153,10 @@ class ShuntCompensatorAdderImpl extends AbstractInjectionAdder<ShuntCompensatorA
             List<ShuntCompensatorNonLinearModelImpl.SectionImpl> sections = IntStream.range(0, sectionAdders.size()).mapToObj(s -> {
                 SectionAdderImpl adder = sectionAdders.get(s);
                 return new ShuntCompensatorNonLinearModelImpl.SectionImpl(s + 1, adder.b, adder.g);
-            }).collect(Collectors.toList());
-
-            return new ShuntCompensatorNonLinearModelImpl(sections);
+            }).toList();
+            ShuntCompensatorNonLinearModelImpl nonLinearModel = new ShuntCompensatorNonLinearModelImpl(sections);
+            this.copyPropertiesTo(nonLinearModel);
+            return nonLinearModel;
         }
 
         @Override
@@ -174,6 +178,12 @@ class ShuntCompensatorAdderImpl extends AbstractInjectionAdder<ShuntCompensatorA
     @Override
     public ShuntCompensatorAdder setSectionCount(int sectionCount) {
         this.sectionCount = sectionCount;
+        return this;
+    }
+
+    @Override
+    public ShuntCompensatorAdder setSolvedSectionCount(Integer solvedSectionCount) {
+        this.solvedSectionCount = solvedSectionCount;
         return this;
     }
 
@@ -220,7 +230,7 @@ class ShuntCompensatorAdderImpl extends AbstractInjectionAdder<ShuntCompensatorA
                 network.getMinValidationLevel(), network.getReportNodeContext().getReportNode()));
 
         ShuntCompensatorImpl shunt = new ShuntCompensatorImpl(getNetworkRef(),
-                id, getName(), isFictitious(), modelBuilder.build(), sectionCount, regulatingTerminal,
+                id, getName(), isFictitious(), modelBuilder.build(), sectionCount, solvedSectionCount, regulatingTerminal,
                 voltageRegulatorOn, targetV, targetDeadband);
 
         shunt.addTerminal(terminal);
